main layout, bib

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,204 +1,244 @@
 % Encoding: windows-1252
 
-@Book{bentley:1999,
-  title     = {{P}rogramming {P}earls},
-  publisher = {Ad\-dison--Wesley},
-  year      = {1999},
-  author    = {Jon Bentley},
-  address   = {Boston, MA, USA},
-  edition   = {2},
+
+% ==================================
+% Motivation
+% ==================================
+
+@article{majumdar2017should,
+  title={How Should a Robot Assess Risk? Towards an Axiomatic Theory of Risk in Robotics},
+  author={Majumdar, Anirudha and Pavone, Marco},
+  journal={arXiv preprint arXiv:1710.11040},
+  year={2017}
 }
 
-@BOOK{bringhurst:2002,
-    title = {{T}he {E}lements of {T}ypographic {S}tyle},
-    publisher = {Hartley \& Marks Publishers},
-    year = {2013},
-    author = {Robert Bringhurst},
-    series = {Version 4.0: 20th Anniversary Edition},
-    address = {Point Roberts, WA, USA}
+@article{leike2017ai,
+  title={AI Safety Gridworlds},
+  author={Leike, Jan and Martic, Miljan and Krakovna, Victoria and Ortega, Pedro A and Everitt, Tom and Lefrancq, Andrew and Orseau, Laurent and Legg, Shane},
+  journal={arXiv preprint arXiv:1711.09883},
+  year={2017}
 }
 
-@BOOK{cormen:2001,
-    title = {{I}ntroduction to {A}lgorithms},
-    publisher = {The MIT Press},
-    year = {2009},
-    author = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald L.
-    and Clifford Stein},
-    address = {Cambridge, MA, USA},
-    edition = 3
+@article{amodei2016concrete,
+  title={Concrete problems in AI safety},
+  author={Amodei, Dario and Olah, Chris and Steinhardt, Jacob and Christiano, Paul and Schulman, John and Man{\'e}, Dan},
+  journal={arXiv preprint arXiv:1606.06565},
+  year={2016}
 }
 
-@BOOK{dueck:trio,
-    title = {{D}ueck's {T}rilogie 2.1: {O}mnisophie -- {S}upramanie -- {T}opothesie},
-    publisher = {Springer},
-	address = {Berlin, Germany},
-    year = {2013},
-    author = {Gunter Dueck}
+@article{shapiro2013kusuoka,
+  title={On Kusuoka representation of law invariant risk measures},
+  author={Shapiro, Alexander},
+  journal={Mathematics of Operations Research},
+  volume={38},
+  number={1},
+  pages={142--152},
+  year={2013},
+  publisher={INFORMS}
 }
 
-@ARTICLE{knuth:1976,
-    author = {Knuth, Donald E.},
-    title = {{B}ig {O}micron and {B}ig {O}mega and {B}ig {T}heta},
-    journal = {SIGACT News},
-    year = {1976},
-    volume = {8},
-    pages = {18--24},
-    number = {2},
-    address = {New York, NY, USA},
-    publisher = {ACM Press}
+
+% ==================================
+% Distributional RL
+% ==================================
+
+@article{bellemare2017distributional,
+  title={A distributional perspective on reinforcement learning},
+  author={Bellemare, Marc G and Dabney, Will and Munos, R{\'e}mi},
+  journal={arXiv preprint arXiv:1707.06887},
+  year={2017}
 }
 
-@ARTICLE{knuth:1974,
-    author = {Knuth, Donald E.},
-    title = {{C}omputer {P}rogramming as an {A}rt},
-    journal = {Communications of the ACM},
-    year = {1974},
-    volume = {17},
-    pages = {667--673},
-    number = {12},
-    address = {New York, NY, USA},
-    publisher = {ACM Press}
+@article{dabney2017distributional,
+  title={Distributional Reinforcement Learning with Quantile Regression},
+  author={Dabney, Will and Rowland, Mark and Bellemare, Marc G and Munos, R{\'e}mi},
+  journal={arXiv preprint arXiv:1710.10044},
+  year={2017}
 }
 
-@BOOK{sommerville:1992,
-    title = {{S}oftware {E}ngineering},
-    publisher = {Addison-Wesley},
-    year = {2015},
-    author = {Ian Sommerville},
-    address = {Boston, MA, USA},
-    edition = 10
+@article{morimura2012parametric,
+  title={Parametric return density estimation for reinforcement learning},
+  author={Morimura, Tetsuro and Sugiyama, Masashi and Kashima, Hisashi and Hachiya, Hirotaka and Tanaka, Toshiyuki},
+  journal={arXiv preprint arXiv:1203.3497},
+  year={2012}
 }
 
-@Book{taleb:2012,
-  title     = {{A}ntifragile: {T}hings {T}hat {G}ain from {D}isorder},
-  publisher = {Random House},
-  year      = {2012},
-  author    = {Taleb, Nassim Nicholas},
-  address   = {New York, NY, USA},
+@inproceedings{morimura2010nonparametric,
+  title={Nonparametric return distribution approximation for reinforcement learning},
+  author={Morimura, Tetsuro and Sugiyama, Masashi and Kashima, Hisashi and Hachiya, Hirotaka and Tanaka, Toshiyuki},
+  booktitle={Proceedings of the 27th International Conference on Machine Learning (ICML-10)},
+  pages={799--806},
+  year={2010}
 }
 
-@Book{taleb:2010,
- title = {The Black Swan: The Impact of the Highly Improbable},
- publisher = {Random House},
- year = {2010},
- author = {Taleb, Nassim Nicholas},
- address = {New York, NY, USA}
- }
- 
+% ==================================
+% CVaR
+% ==================================
 
-@BOOK{ferriss:2016,
-title={Tools of Titans: The Tactics, Routines, and Habits of Billionaires, Icons, and World-Class Performers},
-author={Timothy Ferriss},
-publisher={Houghton Mifflin Harcourt},
-year={2016},
-address = {Boston, MA, USA},
+@inproceedings{chow2015risk,
+  title={Risk-sensitive and robust decision-making: a CVaR optimization approach},
+  author={Chow, Yinlam and Tamar, Aviv and Mannor, Shie and Pavone, Marco},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={1522--1530},
+  year={2015}
 }
 
-@Book{adams:1996,
- author = {Adams, Scott},
- title = {The Dilbert Principle},
- publisher = {Harper Business},
- year = {1996},
- address = {New York, NY, USA}
- }
-
-@Book{adams:2013,
- author = {Adams, Scott},
- title = {How to Fail at Almost Everything and Still Win Big: Kind of the Story of My Life},
- publisher = {Portfolio Penguin},
- year = {2013},
- address = {London, United Kingdom},
- }
-
-@Book{aurelius:2002,
- author = {Aurelius, Marcus},
- title = {Meditations (A New Translation)},
- publisher = {Modern Library},
- year = {2002},
- address = {New York, NY, USA},
- }
-
-@Book{cialdini:1984,
- author = {Cialdini, Robert B.},
- title = {Influence: The Psychology of Persuasion},
- publisher = {Harper Business},
- year = {1984},
- address = {New York, NY, USA}
- }
-
-@Book{feynman:1985,
-  title     = {{S}urely {Y}ou're {J}oking, {M}r. {F}eynman: {A}dventures of a {C}urious {C}haracter},
-  publisher = {W. W. Norton},
-  year      = {1985},
-  author    = {Feynman, Richard P.},
-  address   = {New York, NY, USA},
+@article{rockafellar2000optimization,
+  title={Optimization of conditional value-at-risk},
+  author={Rockafellar, R Tyrrell and Uryasev, Stanislav},
+  journal={Journal of risk},
+  volume={2},
+  pages={21--42},
+  year={2000}
 }
 
-@Book{greenwald:2014,
-  title     = {{N}o {P}lace to {H}ide: {E}dward {S}nowden, the {NSA}, and the {S}urveillance {S}tate},
-  publisher = {Metropolitan Books},
-  year      = {2014},
-  author    = {Greenwald, Glenn},
-  address   = {New York, NY, USA},
+@article{rockafellar2002conditional,
+  title={Conditional value-at-risk for general loss distributions},
+  author={Rockafellar, R Tyrrell and Uryasev, Stanislav},
+  journal={Journal of banking \& finance},
+  volume={26},
+  number={7},
+  pages={1443--1471},
+  year={2002},
+  publisher={Elsevier}
 }
 
-@Book{orwell:1949,
- author = {Orwell, George},
- title = {Nineteen Eighty-Four},
- publisher = {Secker \& Warburg},
- year = {1949},
- address = {London, United Kingdom}
- }
-
-@Book{pausch:2008,
-  title     = {The Last Lecture},
-  publisher = {Hodder \& Stoughton},
-  year      = {2008},
-  author    = {Pausch, Randy},
-  editor    = {Zaslow, Jeffrey},
-  address   = {London, United Kingdom},
+@article{bauerle2011markov,
+  title={Markov decision processes with average-value-at-risk criteria},
+  author={B{\"a}uerle, Nicole and Ott, Jonathan},
+  journal={Mathematical Methods of Operations Research},
+  volume={74},
+  number={3},
+  pages={361--379},
+  year={2011},
+  publisher={Springer}
 }
 
-@Book{seneca,
- author = {Seneca, Lucius},
- title = {Letters from a Stoic: Epistulae Morales ad Lucilium},
- publisher = {Penguin},
- year = {1969},
- address = {Harmondsworth, United Kingdom}
- }
 
-@Book{trump:1987,
- author = {Trump, Donald J. and Schwartz, Tony},
- title = {Trump: The Art of the Deal},
- publisher = {Random House},
- year = {1987},
- address = {New York, NY, USA}
- }
+% ==================================
+% General Risk
+% ==================================
 
- @Book{frankl:1959,
-  author = {Frankl, Viktor E.},
- title = {Man's Search for Meaning},
- publisher = {Beacon Press},
- year = {1959},
- address = {Boston, MA, USA}
-  }
+% TODO: mean-variance, ...
 
-@Book{munger:2008,
-  title     = {Poor Charlie's Almanack: The Wit and Wisdom of Charles T. Munger},
-  publisher = {Donning Company},
-  year      = {2008},
-  author    = {Munger, Charles T.},
-  editor    = {Kaufman, Peter D.},
-  address   = {Virginia Beach, VA, USA},
-  edition   = {3},
+@article{artzner1999coherent,
+  title={Coherent measures of risk},
+  author={Artzner, Philippe and Delbaen, Freddy and Eber, Jean-Marc and Heath, David},
+  journal={Mathematical finance},
+  volume={9},
+  number={3},
+  pages={203--228},
+  year={1999},
+  publisher={Wiley Online Library}
 }
- 
- @Book{postman:2005,
- author = {Postman, Neil},
- title = {Amusing Ourselves to Death: Public Discourse in the Age of Show Business (20th Anniversary Edition)},
- publisher = {Penguin Books},
- year = {2005},
- address = {New York, NY, USA}
- }
+
+
+@article{garcia2015comprehensive,
+  title={A comprehensive survey on safe reinforcement learning},
+  author={Garc{\i}a, Javier and Fern{\'a}ndez, Fernando},
+  journal={Journal of Machine Learning Research},
+  volume={16},
+  number={1},
+  pages={1437--1480},
+  year={2015}
+}
+
+@article{pflug2016time,
+  title={Time-consistent decisions and temporal decomposition of coherent risk functionals},
+  author={Pflug, Georg Ch and Pichler, Alois},
+  journal={Mathematics of Operations Research},
+  volume={41},
+  number={2},
+  pages={682--699},
+  year={2016},
+  publisher={INFORMS}
+}
+
+@inproceedings{tamar2015policy,
+  title={Policy gradient for coherent risk measures},
+  author={Tamar, Aviv and Chow, Yinlam and Ghavamzadeh, Mohammad and Mannor, Shie},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={1468--1476},
+  year={2015}
+}
+
+
+% ==================================
+% General RL
+% ==================================
+
+@book{sutton1998reinforcement,
+  title={Reinforcement learning: An introduction},
+  author={Sutton, Richard S and Barto, Andrew G},
+  volume={1},
+  number={1},
+  year={1998},
+  publisher={MIT press Cambridge}
+}
+
+@article{watkins1992q,
+  title={Q-learning},
+  author={Watkins, Christopher JCH and Dayan, Peter},
+  journal={Machine learning},
+  volume={8},
+  number={3-4},
+  pages={279--292},
+  year={1992},
+  publisher={Springer}
+}
+
+@article{bellman1957markovian,
+  title={A Markovian decision process},
+  author={Bellman, Richard},
+  journal={Journal of Mathematics and Mechanics},
+  pages={679--684},
+  year={1957},
+  publisher={JSTOR}
+}
+
+% ==================================
+% Convergence
+% ==================================
+
+@article{tsitsiklis1994asynchronous,
+  title={Asynchronous stochastic approximation and Q-learning},
+  author={Tsitsiklis, John N},
+  journal={Machine learning},
+  volume={16},
+  number={3},
+  pages={185--202},
+  year={1994},
+  publisher={Springer}
+}
+
+% ==================================
+% Theory
+% ==================================
+
+@book{boyd2004convex,
+  title={Convex optimization},
+  author={Boyd, Stephen and Vandenberghe, Lieven},
+  year={2004},
+  publisher={Cambridge university press}
+}
+
+@book{kreyszig1989introductory,
+  title={Introductory functional analysis with applications},
+  author={Kreyszig, Erwin},
+  volume={1},
+  year={1989},
+  publisher={wiley New York}
+}
+
+@article{koenker2001quantile,
+  title={Quantile regression},
+  author={Koenker, Roger and Hallock, Kevin F},
+  journal={Journal of economic perspectives},
+  volume={15},
+  number={4},
+  pages={143--156},
+  year={2001}
+}
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
