--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -28,9 +28,9 @@
   drafting=true,    % print version information on the bottom of the pages
   tocaligned=false, % the left column of the toc will be aligned (no indentation)
   dottedtoc=false,  % page numbers in ToC flushed right
-  parts=true,       % use part division
+  parts=false,       % use part division
   eulerchapternumbers=true, % use AMS Euler for chapter font (otherwise Palatino)
-  linedheaders=false,       % chaper headers will have line above and beneath
+  linedheaders=true,       % chaper headers will have line above and beneath
   floatperchapter=true,     % numbering per chapter for all floats (i.e., Figure 1.1)
   listings=true,    % load listings package and setup LoL
   subfig=true,      % setup for preloaded subfig package
@@ -280,7 +280,7 @@
 %\usepackage[osf]{libertine}
 %\usepackage[light,condensed,math]{iwona}
 %\renewcommand{\sfdefault}{iwona}
-%\usepackage{lmodern} % <-- no osf support :-(
+\usepackage{lmodern} % <-- no osf support :-(
 %\usepackage{cfr-lm} %
 %\usepackage[urw-garamond]{mathdesign} <-- no osf support :-(
 %\usepackage[default,osfigures]{opensans} % scale=0.95
