--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -17,10 +17,10 @@ Kent Beck how to write good abstracts can be found here:
 
 \vfill
 
-\begin{otherlanguage}{ngerman}
-\pdfbookmark[1]{Zusammenfassung}{Zusammenfassung}
-\chapter*{Zusammenfassung}
-Kurze Zusammenfassung des Inhaltes in deutscher Sprache\dots
+\begin{otherlanguage}{czech}
+\pdfbookmark[1]{Abstrakt}{Abstrakt}
+\chapter*{Abstrakt}
+Český abstrakt
 \end{otherlanguage}
 
 \endgroup
