--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -43,19 +43,19 @@
 % ****************************************************************************************************
 % 2. Personal data and user ad-hoc commands
 % ****************************************************************************************************
-\newcommand{\myTitle}{A Classic Thesis Style\xspace}
-\newcommand{\mySubtitle}{An Homage to The Elements of Typographic Style\xspace}
-\newcommand{\myDegree}{Doktor-Ingenieur (Dr.-Ing.)\xspace}
-\newcommand{\myName}{André Miede\xspace}
+\newcommand{\myTitle}{Risk-Averse Distributional Reinforcement Learning\xspace}
+\newcommand{\mySubtitle}{a CVaR Optimization Approach\xspace}
+\newcommand{\myDegree}{Engineer (Ing.)\xspace}
+\newcommand{\myName}{Silvestr Stanko\xspace}
 \newcommand{\myProf}{Put name here\xspace}
 \newcommand{\myOtherProf}{Put name here\xspace}
 \newcommand{\mySupervisor}{Put name here\xspace}
-\newcommand{\myFaculty}{Put data here\xspace}
-\newcommand{\myDepartment}{Put data here\xspace}
-\newcommand{\myUni}{Put data here\xspace}
-\newcommand{\myLocation}{Saarbrücken\xspace}
-\newcommand{\myTime}{October 2017\xspace}
-\newcommand{\myVersion}{version 4.4}
+\newcommand{\myFaculty}{Faculty of Electrical Engineering\xspace}
+\newcommand{\myDepartment}{Department of Computer Science\xspace}
+\newcommand{\myUni}{Czech Technical University\xspace}
+\newcommand{\myLocation}{Prague\xspace}
+\newcommand{\myTime}{\monthyeardate\today\xspace}
+\newcommand{\myVersion}{version 0.0}
 
 % ********************************************************************
 % Setup, finetuning, and useful commands
@@ -228,16 +228,16 @@
       \renewcommand*{\subsectionautorefname}{Section}%
       \renewcommand*{\subsubsectionautorefname}{Section}%
     }%
-    \addto\extrasngerman{%
-      \renewcommand*{\paragraphautorefname}{Absatz}%
-      \renewcommand*{\subparagraphautorefname}{Unterabsatz}%
-      \renewcommand*{\footnoteautorefname}{Fu\"snote}%
-      \renewcommand*{\FancyVerbLineautorefname}{Zeile}%
-      \renewcommand*{\theoremautorefname}{Theorem}%
-      \renewcommand*{\appendixautorefname}{Anhang}%
-      \renewcommand*{\equationautorefname}{Gleichung}%
-      \renewcommand*{\itemautorefname}{Punkt}%
-    }%
+%    \addto\extrasngerman{%
+%      \renewcommand*{\paragraphautorefname}{Absatz}%
+%      \renewcommand*{\subparagraphautorefname}{Unterabsatz}%
+%      \renewcommand*{\footnoteautorefname}{Fu\"snote}%
+%      \renewcommand*{\FancyVerbLineautorefname}{Zeile}%
+%      \renewcommand*{\theoremautorefname}{Theorem}%
+%      \renewcommand*{\appendixautorefname}{Anhang}%
+%      \renewcommand*{\equationautorefname}{Gleichung}%
+%      \renewcommand*{\itemautorefname}{Punkt}%
+%    }%
       % Fix to getting autorefs for subfigures right (thanks to Belinda Vogt for changing the definition)
       \providecommand{\subfigureautorefname}{\figureautorefname}%
     }{\relax}
