--- a/shortcuts.tex
+++ b/shortcuts.tex
@@ -1,6 +1,10 @@
 \usepackage{algorithm}
 \usepackage{algorithmic}
 \usepackage{amsthm}
+\usepackage{datetime}
+
+
+\newdateformat{monthyeardate}{\monthname[\THEMONTH], \THEYEAR}
 
 
 
