--- a/FrontBackmatter/Titlepage.tex
+++ b/FrontBackmatter/Titlepage.tex
@@ -3,7 +3,7 @@
 %*******************************************************
 \begin{titlepage}
     % if you want the titlepage to be centered, uncomment and fine-tune the line below (KOMA classes environment)
-    \begin{addmargin}[-1cm]{-3cm}
+    % \begin{addmargin}[-1cm]{-3cm}
     \begin{center}
         \large
 
@@ -14,23 +14,26 @@
         \begingroup
             \color{Maroon}\spacedallcaps{\myTitle} \\ \bigskip
         \endgroup
+        
+        \begingroup
+            \color{Maroon}\spacedlowsmallcaps{\mySubtitle} \\ \bigskip
+        \endgroup
 
         \spacedlowsmallcaps{\myName}
 
         \vfill
 
-        \includegraphics[width=6cm]{gfx/TFZsuperellipse_bw} \\ \medskip
+        \includegraphics[width=6cm]{gfx/ctu_logo_black} \\ \medskip
 
-        \mySubtitle \\ \medskip
         %\myDegree \\
-        %\myDepartment \\
-        %\myFaculty \\
-        %\myUni \\ \bigskip
+        \myDepartment \\
+        \myFaculty \\
+        \myUni \\ \bigskip
 
-        \myTime\ -- \myVersion
+        \myTime
 
         \vfill
 
     \end{center}
-  \end{addmargin}
+  %\end{addmargin}
 \end{titlepage}
