--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -30,12 +30,12 @@
   dottedtoc=false,  % page numbers in ToC flushed right
   parts=false,       % use part division
   eulerchapternumbers=true, % use AMS Euler for chapter font (otherwise Palatino)
-  linedheaders=true,       % chaper headers will have line above and beneath
+  linedheaders=true,       % chapter headers will have line above and beneath
   floatperchapter=true,     % numbering per chapter for all floats (i.e., Figure 1.1)
   listings=true,    % load listings package and setup LoL
   subfig=true,      % setup for preloaded subfig package
   eulermath=false,  % use awesome Euler fonts for mathematical formulae (only with pdfLaTeX)
-  beramono=true,    % toggle a nice monospaced font (w/ bold)
+  beramono=false,    % toggle a nice monospaced font (w/ bold)
   minionpro=false   % setup for minion pro font; use minion pro small caps as well (only with pdfLaTeX)
 }{classicthesis}
 
@@ -269,7 +269,7 @@
 % ********************************************************************
 % Changing the text area
 % ********************************************************************
-%\areaset[current]{312pt}{761pt} % 686 (factor 2.2) + 33 head + 42 head \the\footskip
+\areaset[current]{400pt}{761pt} % 686 (factor 2.2) + 33 head + 42 head \the\footskip
 %\setlength{\marginparwidth}{7em}%
 %\setlength{\marginparsep}{2em}%
 
