--- a/thesis.tex
+++ b/thesis.tex
@@ -46,6 +46,25 @@
 \input{shortcuts}
 \input{classicthesis-config}
 
+
+%\SetSymbolFont{operators}   {normal}{OT1}{cmr} {m}{n}
+%\SetSymbolFont{letters}     {normal}{OML}{cmm} {m}{it}
+%\SetSymbolFont{symbols}     {normal}{OMS}{cmsy}{m}{n}
+%\SetSymbolFont{largesymbols}{normal}{OMX}{cmex}{m}{n}
+%\SetSymbolFont{operators}   {bold}  {OT1}{cmr} {bx}{n}
+%\SetSymbolFont{letters}     {bold}  {OML}{cmm} {b}{it}
+%\SetSymbolFont{symbols}     {bold}  {OMS}{cmsy}{b}{n}
+%\SetSymbolFont{largesymbols}{bold}  {OMX}{cmex}{m}{n}
+%
+%\SetMathAlphabet{\mathbf}{normal}{OT1}{cmr}{bx}{n}
+%\SetMathAlphabet{\mathsf}{normal}{OT1}{cmss}{m}{n}
+%\SetMathAlphabet{\mathit}{normal}{OT1}{cmr}{m}{it}
+%\SetMathAlphabet{\mathtt}{normal}{OT1}{cmtt}{m}{n}
+%\SetMathAlphabet{\mathbf}{bold}  {OT1}{cmr}{bx}{n}
+%\SetMathAlphabet{\mathsf}{bold}  {OT1}{cmss}{bx}{n}
+%\SetMathAlphabet{\mathit}{bold}  {OT1}{cmr}{bx}{it}
+%\SetMathAlphabet{\mathtt}{bold}  {OT1}{cmtt}{m}{n}
+
 %********************************************************************
 % Bibliographies
 %*******************************************************
