--- a/shortcuts.tex
+++ b/shortcuts.tex
@@ -28,7 +28,6 @@
 \newcommand{\expval}[1]{\mathbb{E}\left[ {#1} \right]}
 
 
-%\newcommand{\exp}{\mathbb{E}}
 \newcommand{\given}[1][]{\:#1\vert\:}
 
 \newtheorem{theorem}{Theorem}
@@ -39,7 +38,11 @@
 
 \newcommand{\bround}[1]{\left( {#1} \right)}
 \newcommand{\bsquare}[1]{\left[ {#1} \right]}
-\newcommand{\braces}[1]{\left{ {#1} \right}}
+\newcommand{\braces}[1]{\left\{ {#1} \right\}}
+
+\newcommand{\interpI}{\mathcal{I}}
+\newcommand{\dt}{\text{d}}
+
 
 
 
