changed supervised citation

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -48,6 +48,13 @@
   publisher={Nature Publishing Group}
 }
 
+@article{basel2013fundamental,
+  title={Fundamental review of the trading book: A revised market risk framework},
+  author={Basel Committee and others},
+  journal={Consultative Document, October},
+  year={2013}
+}
+
 
 @article{mnih2015human,
   title={Human-level control through deep reinforcement learning},
