first presentation finalized

--- a/presentation/pres.tex
+++ b/presentation/pres.tex
@@ -127,7 +127,7 @@
 
 \begin{figure}
 \includegraphics[width=\linewidth]{../gfx/running_tiger.png}
-\caption{Reinforcement Learning safety}
+\caption{AI safety}
 \end{figure}
 
 
@@ -139,8 +139,10 @@
 \begin{frame}{Value-at-Risk}
 
 \begin{itemize}
-\item facts
-\item more facts
+\item Easy to understand
+\item Historically the most used risk-measure
+\item Undesirable computational properties
+\item Does not differentiate between large and catastrophic losses
 \end{itemize}
 
 $$
@@ -152,8 +154,9 @@ $$
 \begin{frame}{Conditional Value-at-Risk}
 
 \begin{itemize}
-\item facts
-\item more facts
+\item Coherent risk measure
+\item Basel Committee on Banking Supervision $\to$ CVaR
+\item Equivalent to robustness
 \end{itemize}
 
 $$
