--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -248,6 +248,16 @@
   publisher={JSTOR}
 }
 
+@inproceedings{bertsekas1995neuro,
+  title={Neuro-dynamic programming: an overview},
+  author={Bertsekas, Dimitri P and Tsitsiklis, John N},
+  booktitle={Decision and Control, 1995., Proceedings of the 34th IEEE Conference on},
+  volume={1},
+  pages={560--564},
+  year={1995},
+  organization={IEEE}
+}
+
 % ==================================
 % Convergence
 % ==================================
