--- a/shortcuts.tex
+++ b/shortcuts.tex
@@ -17,14 +17,20 @@
 
 
 \newcommand{\cvar}{\text{CVaR}}
+\newcommand{\acvara}{\alpha\text{CVaR}_\alpha}
+
 \newcommand{\var}{\text{VaR}}
 
 \newcommand{\envelope}{\mathcal{U}_{\cvar}(\alpha, P(\cdot | x, a))}
 
+\newcommand{\cA}{\mathcal{A}}
+\newcommand{\cX}{\mathcal{X}}
+\newcommand{\cT}{\mathcal{T}}
+
 
 
 \newcommand{\indicator}{\mathbb{1}}
-\renewcommand{\exp}{\mathbb{E}}
+\newcommand{\expect}{\mathop{\mathbb{E}}}
 \newcommand{\expval}[1]{\mathbb{E}\left[ {#1} \right]}
 
 
@@ -33,6 +39,7 @@
 \newtheorem{theorem}{Theorem}
 \newtheorem{corollary}{Corollary}
 \newtheorem{lemma}{Lemma}
+\newtheorem{definition}{Definition}
 
 
 
